Added JavaFX maven dependency to allow builds on OpenJDK.

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
             <version>7.1.11</version>
         </dependency>
         <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>14</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j.version}</version>
