--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,6 +41,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: signer-app-0.0.1-SNAPSHOT-jar-with-dependencies.jar
+          asset_path: staging/signer-app-0.0.1-SNAPSHOT-jar-with-dependencies.jar
           asset_name: signer-app-0.0.1.jar
           asset_content_type: application/java-archive
