--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,8 +30,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: 0.0.3
+          release_name: Release 0.0.3
           draft: false
           prerelease: false
       - name: Upload Release Asset
@@ -41,6 +41,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: staging/signer-app-0.0.2-SNAPSHOT-jar-with-dependencies.jar
-          asset_name: signer-app-0.0.2.jar
+          asset_path: staging/signer-app-0.0.3-SNAPSHOT-jar-with-dependencies.jar
+          asset_name: signer-app-0.0.3.jar
           asset_content_type: application/java-archive
